--- a/about.html
+++ b/about.html
@@ -11,12 +11,25 @@
   </head>
   <body>
 
+    <style>
+      * {
+        font-family: 'Arial'!important;
+      }
+      body {
+        background: white;
+      }
+      a.button {
+        border: none;
+        background: rgba(11, 25, 59, 0.9);
+      }
+    </style>
+
     <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l">
       <nav class="f6 fw6 ttu tracked">
-        <a class="link dim white dib mr3" href="#" title="Home">DRONE TRACKING TECHNOLOGIES</a>
-        <a class="link dim white dib mr3 blue" href="#" title="About">Products</a>
-        <a class="link dim white dib mr3 blue" href="#" title="Store">About</a>
-        <a class="link dim white dib blue" href="#" title="Contact">Contact</a>
+        <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
+        <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
+        <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
+        <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
       </nav>
     </header>
 
@@ -70,9 +83,6 @@
           </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 white link dim" href="/support.html">
-            SUPPORT
-          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
