--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </article>
       <article class="bb b--black-10">
-        <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+        <a class="db pv4 ph3 ph0-l no-underline black dim" href="/products.html">
           <div class="flex flex-column flex-row-ns">
             <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
               <img src="/images/p3.png" class="db" alt="Photo of a whale's tale coming crashing out of the water.">
@@ -157,9 +157,6 @@
           </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 white link dim" href="/support.html">
-            SUPPORT
-          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
