--- a/products.html
+++ b/products.html
@@ -11,85 +11,77 @@
   </head>
   <body>
 
-    <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l" style="z-index:11;background: #ff7171;">
+    <style>
+      * {
+        font-family: 'Arial'!important;
+      }
+      body {
+        background: white;
+      }
+      a.button {
+        border: none;
+        background: rgba(11, 25, 59, 0.9);
+      }
+    </style>
+
+    <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l">
       <nav class="f6 fw6 ttu tracked">
-        <a class="link dim white dib mr3" href="/index.html" title="Home" style="letter-spacing: 0.7em;">TELESCOPE</a>
+        <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
+        <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
+        <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
+        <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
       </nav>
     </header>
 
-    <article data-name="article-full-bleed-background">
-      <div class="cf" style="background-size: cover; background:white;">
-
-        <div class="fl pa3 pa4-ns bg-white black-70 measure-narrow f3">
-          <header class="bb b--black-70 pv4">
-            <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">Use cases</h3>
-            <h4 class="f3 fw4 i lh-title mt0">Why use TELESCOPE?</h4>
-          </header>
-          <section class="pt5 pb4">
-            <p class="lh-copy measure f4 mt0">
-              * Defeat location and advertisement tracking <br /><br />
-              * Access the internet from a secure environment or network without exposing it to risk <br /><br />
-              * Get VPN functionality with a web browser (no VPN required) <br /><br />
-              * You get complete isolation between TELESCOPES to avoid all pivoting and lateral attacks  <br /><br />
-            </p>
-          </section>
-        </div>
-        <div class="fl pa3 pa4-ns bg-white black-70 measure-narrow f3" style="max-width: 50%;padding: 3.5em;background: #92fc92;font-size:2em;">
-        <span class="db-l">
-          <svg class="w1" data-icon="info" viewBox="0 0 32 32" style="fill:currentcolor">
-            <title>info icon</title>
-            <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
-          </svg>
-          TELESCOPE is not a VPN, its a private browser or application running in an isolated server. It effectively protects you against spyware, malware and location tracking with a security model that can be easily explained to humans.
-           You can integrate TELESCOPE within your network infrastucture or use our completely managed service to save on infrastucture costs.
-        </span>
-      </div>
-      </div>
-    </article>
-
-    <article class="cf pa3 mw9 center semi-white">
-      <section class="fl w-100">
-        <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-          <h2 class="lh-title f3 b mt0">
-            PRICING
-          </h2>
-          <p class="f6 lh-copy measure">
-
-          </p>
-        </header>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-          <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">SMEs</a>
-          <p class="f6 lh-copy measure">
-            SMALL TO MEDIUM SIZED BUSINESS
-          </p>
-
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-          <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">ENTERPRISE</a>
-          <p class="f6 lh-copy measure">
-            CONTACT US FOR PRICING
-          </p>
-        </div>
-
-      </section>
-    </article>
+    <br /><br /><br /><br />
 
     <div class="flex items-center justify-center pa4 bg-lightest-blue navy enterprise-info">
       <svg class="w1" data-icon="info" viewBox="0 0 32 32" style="fill:currentcolor">
         <title>info icon</title>
         <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
       </svg>
-      <span class="lh-title ml3">Contact us for enterprise pricing plans</span>
+      <span class="lh-title ml3">Contact us for a demo</span>
     </div>
 
     <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          CUSTOMER LOG IN
+          F-Series
         </h1>
+        <img src="/images/vad1.png" />
+        <article class="pa3 pa5-ns tl" data-name="slab-stat-large">
+          <h3 class="f6 ttu tracked tl">The F-series is an affordable and flexible solution for computer vision detection that can be installed and integrated with zero fuss.</h3>
+        </article>
+      </header>
+      <div class="fn fl-ns w-50-ns">
+        <header class="fn fl-ns w-50-ns pr4-ns">
+          <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+          </h1>
+          <article data-name="slab-stat-large">
+            <p class="f7 mt4 tl" style="font-size: 1em;">The F-Series drone system is a self contained system designed to work offline and without updates.</p>
+            <p class="f7 mt4 tl" style="font-size: 1em;">
+              Advanced optical drone detection <br /><br />
+              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
+              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
+              Works offline (works without updates or internet connection)  <br /><br />
+              500GB internal video storage  <br /><br />
+              Lightweight portable design  <br /><br />
+              Various battery capacity options for UPS module  <br /><br />
+              500m IR illumination  <br /><br />
+              Optional GSM Module
+            </p>
+          </article>
+      </div>
+    </article>
+
+    <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
+      <header class="fn fl-ns w-50-ns pr4-ns">
+        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+          P-Series
+        </h1>
+        <img src="/images/vad2.png" />
         <article class="pa3 pa5-ns" data-name="slab-stat-large">
-          <h3 class="f6 ttu tracked">ACCESS YOUR TELESCOPE</h3>
-          <h3 class="f6 ttu tracked">MANAGE YOUR ACCOUNT</h3>
+          <h3 class="f6 ttu tracked">The P-series is an affordable and flexible, portable solution for drone detection that can be setup and online with zero fuss.</h3>
         </article>
 
       </header>
@@ -97,9 +89,19 @@
         <header class="fn fl-ns w-50-ns pr4-ns">
           <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
           </h1>
-          <article data-name="slab-stat-large" style="font-size:3em;">
-            <h2>CUSTOMER LOGIN OPENS SOON</h2>
-            <!-- <div data-netlify-identity-menu></div> -->
+          <article data-name="slab-stat-large">
+            <p class="f7 mt4 tl" style="font-size: 1em;"></p>
+            <p class="f7 mt4 tl" style="font-size: 1em;">
+              Advanced optical drone detection <br /><br />
+              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
+              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
+              Works offline (works without updates or internet connection)  <br /><br />
+              500GB internal video storage  <br /><br />
+              Lightweight portable design  <br /><br />
+              Various battery capacity options for UPS module  <br /><br />
+              500m IR illumination  <br /><br />
+              Optional GSM Module
+            </p>
           </article>
       </div>
     </article>
@@ -109,50 +111,59 @@
         <div class="dt-ns dt--fixed-ns w-100">
           <div class="pa3 pa4-ns dtc-ns v-mid">
             <div>
-              <h2 class="fw4 blue mt0 mb3" style="color: #222;font-weight: bold;">HELP & SUPPORT </h2>
+              <h2 class="fw4 blue mt0 mb3" style="color: #222;font-weight: bold;">CONTACT US </h2>
               <p class="black-70 measure lh-copy mv0">
-                JOIN OUR SLACK CHANNEL FOR HELP AND SUPPORT
+                GET YOUR QUESTIONS ANSWERED
               </p>
             </div>
           </div>
           <div class="pa3 pa4-ns dtc-ns v-mid">
-            <a href="/support.html" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2" style="border-radius: 0;background: #222;">GO TO SUPPORT</a>
+            <a href="/contact.html" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2" style="border-radius: 0;background: #222;">CONTACT US</a>
           </div>
         </div>
       </article>
     </section>
 
-    <footer class="pa4 pa5-l black-70 bt b--black-10">
+    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(11, 25, 59, 0.9);border-top: 74px solid #f2f2f2;">
       <div class="mb4-l cf">
-        <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4">TELESCOPE</h1>
+        <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4 white">DRONE TRACKING TECHNOLOGIES</h1>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/index.html" title="HOME">HOME</a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/about.html" title="ABOUT">ABOUT</a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/telescope.html" title="TELESCOPE">TELESCOPE</a>
+          <a class="f6 db fw6 pv3 white link dim" href="/index.html">
+            HOME
+          </a>
+          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
+            ABOUT
+          </a>
+          <a class="f6 db fw6 pv3 white link dim" href="/products.html">
+            PRODUCTS
+          </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/support.html" title="SUPPORT">SUPPORT</a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/contact.html" title="CONTACT">CONTACT</a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/privacy.html" title="PRIVACY">PRIVACY</a>
+          <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
+            CONTACT
+          </a>
+          <a class="f6 db fw6 pv3 white link dim" href="/privacy.html">
+            PRIVACY
+          </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mb4 pl2 pl0-ns">
         </article>
       </div>
-
       <div class="dt dt--fixed w-100" >
         <div class="dn dtc-ns v-mid">
-          <p class="f7 black-70 dib pr3 mb3">
-            Copyright © TX11 2018
+          <p class="f7 white dib pr3 mb3">
+            Copyright © DRONE TRACKING TECHNOLOGIES 2019
           </p>
         </div>
         <div class="db dtc-ns black-70 tc tr-ns v-mid">
+          <a href="https://www.tx11.co.uk" class="link dim dib white">DRONE TRACKING TECHNOLOGIES</a>
         </div>
       </div>
       <div class="db dn-ns">
-        <p class="f7 black-70 mt4 tc">
-          Copyright © <a href="https://tx11.co.uk">TX11</a> 2018
+        <p class="f7 white-70 mt4 tc">
+          Copyright © DRONE TRACKING TECHNOLOGIES 2019
         </p>
       </div>
     </footer>
