--- a/contact.html
+++ b/contact.html
@@ -3,52 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>TELESCOPE - CONTACT</title>
-    <meta name="author" content="m-onz">
+    <title>DTT - CONTACT</title>
+    <meta name="author" content="drone tracking technologies">
     <meta name="description" content="telescope BaaS browser as a service platform">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/tachyons.css">
   </head>
   <body>
-    <header class="bg-white black-80 tc pv4 avenir main-nav">
-      <a href="">
-        <img src="/telescope2.jpg" class="telescope_logo" />
-      </a>
-      <h1 class="mt2 mb0 i fw1 f1">TELESCOPE</h1>
-      <h2 class="mt2 mb0 f6 fw4 ttu tracked">T<span style="text-transform:lowercase;">aa</span>S TELESCOPE as a service</h2>
-      <nav class="bt bb tc mw7 center mt4 main-nav-no-border">
-        <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" href="/index.html">HOME</a>
-        <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="/about.html">TELESCOPE</a>
-        <!-- <a class="f6 f5-l link bg-animate black-80 hover-bg-light-blue dib pa3 ph4-l" href="/telescope.html">TELESCOPE</a> -->
-        <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" href="/support.html">SUPPORT</a>
-        <a class="f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l" href="/contact.html">CONTACT</a>
+    <style>
+      * {
+        font-family: 'Arial'!important;
+      }
+      body {
+        background: white;
+      }
+      a.button {
+        border: none;
+        background: rgba(11, 25, 59, 0.9);
+      }
+    </style>
+
+    <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l">
+      <nav class="f6 fw6 ttu tracked">
+        <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
+        <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
+        <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
+        <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
       </nav>
     </header>
 
-    <!--
-    <section class="ph3 ph5-ns pv5">
-      <article class="mw8 center br2 ba b--light-blue bg-lightest-blue try-telescope">
-        <div class="dt-ns dt--fixed-ns w-100">
-          <div class="pa3 pa4-ns dtc-ns v-mid">
-            <div>
-              <h2 class="fw4 mt0 mb3">TRY TELESCOPE TODAY!</h2>
-              <p class="black-70 measure lh-copy mv0">
-                Register and get 1 hour free usage of a telescope.
-              </p>
-              <div class="pa3 pa4-ns dtc-ns v-mid">
-                <div data-netlify-identity-menu></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-    </section>
-    -->
+    <br /><br /><br />
 
-    <article class="cf ph3 ph5-ns pv5 semi-white">
+    <article class="cf ph3 ph5-ns pv5" style="background:#e1e1e1;">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          TELESCOPE
+          DRONE TRACKING TECHNOLOGIES
         </h1>
         <h2 class="f3 mid-gray lh-title">
           Contact
@@ -76,92 +65,25 @@
       </div>
     </article>
 
-    <article data-name="article-full-bleed-background">
-      <div class="cf" style="background:transparent; background-size: cover;">
-
-        <div class="fl pa3 pa4-ns bg-white black-70 measure-narrow f3">
-          <header class="bb b--black-70 pv4">
-            <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">Use cases</h3>
-            <h4 class="f3 fw4 i lh-title mt0">Why use TELESCOPE?</h4>
-          </header>
-          <section class="pt5 pb4">
-            <p class="lh-copy measure f4 mt0">
-              * Defeat location and advertisement tracking <br /><br />
-              * Access the internet from a secure environment or network  <br /><br />
-              * Get VPN functionality with a web browser (no VPN required) <br /><br />
-            </p>
-          </section>
-        </div>
-        <div class="fl pa3 pa4-ns bg-white black-70 measure-narrow f3" style="max-width: 50%;padding: 3.5em;background: #92fc92;font-size:2em;">
-        <span class="db-l">
-          <svg class="w1" data-icon="info" viewBox="0 0 32 32" style="fill:currentcolor">
-            <title>info icon</title>
-            <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
-          </svg>
-          TELESCOPE is not a VPN, its a private browser or application running in an isolated server. It effectively protects you against advertising,
-           spyware, malware and location tracking with a security model that can be easily explained to humans.
-        </span>
-      </div>
-      </div>
-    </article>
-
-    <article class="cf pa3 mw9 center semi-white">
-      <section class="fl w-100">
-        <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-          <h2 class="lh-title f3 b mt0">
-            PRICING
-          </h2>
-          <p class="f6 lh-copy measure">
-
-          </p>
-        </header>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-          <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">SMEs</a>
-          <p class="f6 lh-copy measure">
-            SMALL TO MEDIUM SIZED BUSINESS
-          </p>
-
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-          <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">ENTERPRISE</a>
-          <p class="f6 lh-copy measure">
-            CONTACT US FOR PRICING
-          </p>
-        </div>
-
-      </section>
-    </article>
-
-    <div class="flex items-center justify-center pa4 bg-lightest-blue navy enterprise-info">
-      <svg class="w1" data-icon="info" viewBox="0 0 32 32" style="fill:currentcolor">
-        <title>info icon</title>
-        <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
-      </svg>
-      <span class="lh-title ml3">Contact us for self hosted enterprise plans</span>
-    </div>
-
-    <footer class="pa4 pa5-l black-70 bt b--black-10 semi-white">
+    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(11, 25, 59, 0.9);border-top: 74px solid #f2f2f2;">
       <div class="mb4-l cf">
-        <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4">TELESCOPE</h1>
+        <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4 white">DRONE TRACKING TECHNOLOGIES</h1>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/index.html">
+          <a class="f6 db fw6 pv3 white link dim" href="/index.html">
             HOME
           </a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/about.html">
+          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
             ABOUT
           </a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/telescope.html">
-            TELESCOPE
+          <a class="f6 db fw6 pv3 white link dim" href="/products.html">
+            PRODUCTS
           </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/support.html">
-            SUPPORT
-          </a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/contact.html">
+          <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
-          <a class="f6 db fw6 pv3 black-70 link dim" href="/privacy.html">
+          <a class="f6 db fw6 pv3 white link dim" href="/privacy.html">
             PRIVACY
           </a>
         </article>
@@ -172,21 +94,19 @@
       </div>
       <div class="dt dt--fixed w-100" >
         <div class="dn dtc-ns v-mid">
-          <p class="f7 black-70 dib pr3 mb3">
-            Copyright © TX11 2018
+          <p class="f7 white dib pr3 mb3">
+            Copyright © DRONE TRACKING TECHNOLOGIES 2019
           </p>
         </div>
         <div class="db dtc-ns black-70 tc tr-ns v-mid">
-          <a href="https://www.tx11.co.uk" class="link dim dib black-70">TX11</a>
+          <a href="https://www.tx11.co.uk" class="link dim dib white">DRONE TRACKING TECHNOLOGIES</a>
         </div>
       </div>
       <div class="db dn-ns">
-        <p class="f7 black-70 mt4 tc">
-          Copyright © TX11 2018
+        <p class="f7 white-70 mt4 tc">
+          Copyright © DRONE TRACKING TECHNOLOGIES 2019
         </p>
       </div>
     </footer>
-
-    <script src="/js/bundle.js?v=222"></script>
   </body>
 </html>
