--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="tc-l mt4 mt5-m mt6-l ph3">
           <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">DRONE DETECTION</h1>
           <h2 class="fw1 f3 white-80 mt3 mb4">Advanced optical and audio drone detection systems.</h2>
-          <a class="f6 no-underline grow dib v-mid white ba b--blue ph3 pv2 mb3" href="/">Get a demo</a>
+          <a class="f6 no-underline grow dib v-mid white ba b--blue ph3 pv2 mb3" href="/contact.html">Get a demo</a>
           <span class="dib v-mid ph3 white-70 mb3">or</span>
-          <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="">See products</a>
+          <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="/products.html">See products</a>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
       <div class="dt dt--fixed w-100" >
         <div class="dn dtc-ns v-mid">
           <p class="f7 white dib pr3 mb3">
-            Copyright © DRONE TRACKING TECHNOLOGIES 2019
+            Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
           </p>
         </div>
         <div class="db dtc-ns black-70 tc tr-ns v-mid">
@@ -181,7 +181,7 @@
       </div>
       <div class="db dn-ns">
         <p class="f7 white-70 mt4 tc">
-          Copyright © DRONE TRACKING TECHNOLOGIES 2019
+          Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
         </p>
       </div>
     </footer>
