--- a/products.html
+++ b/products.html
@@ -154,7 +154,7 @@
       <div class="dt dt--fixed w-100" >
         <div class="dn dtc-ns v-mid">
           <p class="f7 white dib pr3 mb3">
-            Copyright © DRONE TRACKING TECHNOLOGIES 2019
+            Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
           </p>
         </div>
         <div class="db dtc-ns black-70 tc tr-ns v-mid">
@@ -163,22 +163,10 @@
       </div>
       <div class="db dn-ns">
         <p class="f7 white-70 mt4 tc">
-          Copyright © DRONE TRACKING TECHNOLOGIES 2019
+          Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
         </p>
       </div>
     </footer>
-
-    <script>
-    // var user = window.netlifyIdentity.currentUser();
-    // // console.log(user)
-    // window.netlifyIdentity.on("init", user => console.log(user));
-    // window.netlifyIdentity.on("login", user => console.log(user));
-    // window.netlifyIdentity.on("logout", () => console.log("Logged out"));
-    // window.netlifyIdentity.on("error", err => console.error("Logged out"));
-    // window.netlifyIdentity.on("open", () => console.log("Widget opened"));
-    // window.netlifyIdentity.on("close", () => console.log("Widget closed"));
-    // console.log('>', window.netlifyIdentity)
-    </script>
 
     <style>
       .netlify-identity-menu {
