--- a/privacy.html
+++ b/privacy.html
@@ -82,7 +82,7 @@
       <div class="dt dt--fixed w-100" >
         <div class="dn dtc-ns v-mid">
           <p class="f7 white dib pr3 mb3">
-            Copyright © DRONE TRACKING TECHNOLOGIES 2019
+            Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
           </p>
         </div>
         <div class="db dtc-ns black-70 tc tr-ns v-mid">
@@ -91,7 +91,7 @@
       </div>
       <div class="db dn-ns">
         <p class="f7 white-70 mt4 tc">
-          Copyright © DRONE TRACKING TECHNOLOGIES 2019
+          Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
         </p>
       </div>
     </footer>
