--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>DRONE DETECTION TECHNOLOGIES</title>
+    <title>DTT - HOME</title>
     <meta name="author" content="drone detection technologies">
     <meta name="description" content="optical drone detection systems">
     <meta name="viewport" content="width=device-width, initial-scale=1">
