--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           DRONE TRACKING TECHNOLOGIES
         </h1>
         <h2 class="f3 mid-gray lh-title">
-          Contact
+          Contact: <a href="mailto:support@dronetrackingtechnologies.com">support@dronetrackingtechnologies.com</a>
         </h2>
         <time class="f6 ttu tracked gray"></time>
       </header>
