--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
     </div>
   </header>
 
+    <article class="mw5 mw7-ns center bg-light-gray pa3 pa5-ns">
+      <h4 class="f6">Acoustic drone detection demonstration</h4>
+      <div class="aspect-ratio aspect-ratio--16x9 mb4">
+      <div class="aspect-ratio--object cover"></div>
+        <iframe src="https://player.vimeo.com/video/315626090" width="100%" height="400" frameborder="0"webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+    </article>
+
     <main class="w-100 cf helvetica dark-gray bg-white pa3 pa4-m pa5-l mw9 center" style="background: url(/images/home.jpg)">
         <div class="fl w-50 w-50 w-25-l pl2 pl0-l pr2-m pr4-l mb3 mb4-l">
           <div class="cover pv5 pv6-m pv7-l"> </div>
