--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
     </div>
   </header>
 
+  <article class="mw5 mw7-ns center bg-light-gray pa3 pa5-ns">
+    <h4 class="f6">Optical drone detection demonstration</h4>
+    <div class="aspect-ratio aspect-ratio--16x9 mb4">
+    <div class="aspect-ratio--object cover"></div>
+      <iframe src="https://player.vimeo.com/video/316920018" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+  </article>
+
     <article class="mw5 mw7-ns center bg-light-gray pa3 pa5-ns">
       <h4 class="f6">Acoustic drone detection demonstration</h4>
       <div class="aspect-ratio aspect-ratio--16x9 mb4">
