--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
       <nav class="f6 fw6 ttu tracked">
         <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
         <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
+        <a class="link dim white dib mr3 blue" href="/services.html" title="About">Services</a>
         <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
         <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
       </nav>
@@ -83,6 +84,9 @@
           </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
+          <a class="f6 db fw6 pv3 white link dim" href="/services.html">
+            SERVICES
+          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
