--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="dtc v-mid tr pa3">
             <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/" >Home</a>
             <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/products.html" >Products</a>
+            <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/services.html" >Services</a>
             <a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph3" href="/about.html" >About</a>
             <a class="f6 fw4 hover-white no-underline white-70 dib ml2 pv2 ph3 ba" href="/contact.html" >Contact</a>
           </div>
@@ -173,6 +174,9 @@
           </a>
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
+          <a class="f6 db fw6 pv3 white link dim" href="/services.html">
+            SERVICES
+          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
