--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>DTT - PRODUCTS</title>
+    <title>DTT - SERVICES</title>
     <meta name="author" content="drone tracking technologies">
     <meta name="description" content="optical drone detection systems">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,17 +41,17 @@
         <title>info icon</title>
         <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
       </svg>
-      <span class="lh-title ml3">Contact us for a demo</span>
+      <span class="lh-title ml3">Contact us with any queries</span>
     </div>
 
     <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          F-Series
+          Event services
         </h1>
-        <img src="/images/vad1.png" />
+        <img src="/images/nightclub.jpg" />
         <article class="pa3 pa5-ns tl" data-name="slab-stat-large">
-          <h3 class="f6 ttu tracked tl">The F-series is an affordable and flexible solution for computer vision detection that can be installed and integrated with zero fuss.</h3>
+          <h3 class="f6 ttu tracked tl">One day or multi day events.</h3>
         </article>
       </header>
       <div class="fn fl-ns w-50-ns">
@@ -59,49 +59,18 @@
           <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
           </h1>
           <article data-name="slab-stat-large">
-            <p class="f7 mt4 tl" style="font-size: 1em;">The F-Series drone system is a self contained system designed to work offline and without updates.</p>
             <p class="f7 mt4 tl" style="font-size: 1em;">
-              Advanced optical drone detection <br /><br />
-              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
-              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
-              Works offline (works without updates or internet connection)  <br /><br />
-              500GB internal video storage  <br /><br />
-              Lightweight portable design  <br /><br />
-              Various battery capacity options for UPS module  <br /><br />
-              500m IR illumination  <br /><br />
-              Optional GSM Module
+              Our drone detection services are available for one day or multi-day events. Our dedicated team will set up and monitor a series of drone detection masts and report back any findings to a point of contact or on site incident response teams.
+              <br /><br />
+              Using a series of masts is a cost effective way to cover large perimeters to lessen the work load of security. The day and night capabilities as well as audio detection means that the detection can be left working overnight.
+              <br /><br />
+              The audio detection capabilities of each drone detection mast are even effective against drones that use visual camouflage in an attempt to avoid detection. Our audio detection capability is also effective in bad weather conditions like fog.
             </p>
-          </article>
-      </div>
-    </article>
-
-    <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
-      <header class="fn fl-ns w-50-ns pr4-ns">
-        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          P-Series
-        </h1>
-        <img src="/images/vad2.png" />
-        <article class="pa3 pa5-ns" data-name="slab-stat-large">
-          <h3 class="f6 ttu tracked">The P-series is an affordable and flexible, portable solution for drone detection that can be setup and online with zero fuss.</h3>
-        </article>
-
-      </header>
-      <div class="fn fl-ns w-50-ns">
-        <header class="fn fl-ns w-50-ns pr4-ns">
-          <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          </h1>
-          <article data-name="slab-stat-large">
-            <p class="f7 mt4 tl" style="font-size: 1em;"></p>
             <p class="f7 mt4 tl" style="font-size: 1em;">
-              Advanced optical drone detection <br /><br />
-              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
-              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
-              Works offline (works without updates or internet connection)  <br /><br />
-              500GB internal video storage  <br /><br />
-              Lightweight portable design  <br /><br />
-              Various battery capacity options for UPS module  <br /><br />
-              500m IR illumination  <br /><br />
-              Optional GSM Module
+              Get notified immedietely when a drone is detected <br /><br />
+              Get intelligence about likely drone operator whereabouts <br /><br />
+              Day and night detection <br /><br />
+              Robust optical and audio detection
             </p>
           </article>
       </div>
