--- a/services.html
+++ b/services.html
@@ -62,15 +62,15 @@
             <p class="f7 mt4 tl" style="font-size: 1em;">
               Our drone detection services are available for one day or multi-day events. Our dedicated team will set up and monitor a series of drone detection masts and report back any findings to a point of contact or on site incident response teams.
               <br /><br />
-              Using a series of masts is a cost effective way to cover large perimeters to lessen the work load of security. The day and night capabilities as well as audio detection means that the detection can be left working overnight.
+              We provide a series of masts to cover your entire perimeter and lessen the work load of security. The day and night capabilities as well as audio detection means that the detection can be left working overnight.
               <br /><br />
               The audio detection capabilities of each drone detection mast are even effective against drones that use visual camouflage in an attempt to avoid detection. Our audio detection capability is also effective in bad weather conditions like fog.
             </p>
             <p class="f7 mt4 tl" style="font-size: 1em;">
-              Get notified immedietely when a drone is detected <br /><br />
-              Get intelligence about likely drone operator whereabouts <br /><br />
-              Day and night detection <br /><br />
-              Robust optical and audio detection
+              * Get notified immedietely when a drone is detected <br /><br />
+              * Get intelligence about likely drone operator whereabouts <br /><br />
+              * Day and night detection <br /><br />
+              * Robust optical and audio detection
             </p>
           </article>
       </div>
