--- a/products.html
+++ b/products.html
@@ -69,7 +69,11 @@
               Lightweight portable design  <br /><br />
               Various battery capacity options for UPS module  <br /><br />
               500m IR illumination  <br /><br />
-              Optional GSM Module
+              Optional GSM Module <br /><br />
+              180 degree field of view <br /><br />
+              <br /><br />
+              £3000 excluding VAT <br /><br />
+              upgrade for full 360 degree field of view + £2000
             </p>
           </article>
       </div>
@@ -101,9 +105,57 @@
               Lightweight portable design  <br /><br />
               Various battery capacity options for UPS module  <br /><br />
               500m IR illumination  <br /><br />
-              Optional GSM Module
+              Optional GSM Module <br /><br /><br /><br />
+
+              £3000 excluding VAT <br /><br />
+              upgrade for full 360 degree field of view + £2000
             </p>
           </article>
+      </div>
+    </article>
+
+    <article class="cf ph3 ph5-ns pv5" style="background:#e1e1e1;">
+      <header class="fn fl-ns w-50-ns pr4-ns">
+        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+          State of the art drone detection
+        </h1>
+        <h2 class="f3 mid-gray lh-title">
+         Honest and affordable
+        </h2>
+        <time class="f6 ttu tracked gray"></time>
+      </header>
+      <div class="fn fl-ns w-50-ns">
+        <p>We made the decision to avoid using radio / RF for drone detection because we believe it has some major flaws and can
+         be easily circumvented. The cost of RF, thermal and some radar/lidar systems is also a barrier to those seeking an affordable detection system.
+        <br /><br />
+        To bypass an RF drone detection system worth millions of pounds and employed by a major airport involves buying a DIY drone kit...
+        and modifying it to use any line of sight communication method.
+        <br /><br />
+        This is by no means a comprehensive list of bypass methods. None of the bypass methods discovered by researchers are beyond a determined attacker.
+        </p>
+        <h2>Drone detection with machine learning</h2>
+        <p>
+        We decided to take the route of using cameras and microphones to detect drones. This came with its own challenges but as we are a small team we can produce our system at a drastically reduced cost and pass on the savings to our customers.
+        </p>
+        <h2>Audio detection</h2>
+        <p>
+          The common argument against audio detection is that it is easily tricked by urban background noises and won't work beyond 50 meters. These are exactly the kind of challenges we where faced with but using machine learning its possible to get amazing results. We are happy to say that these are no longer issues for us as we can use audio detection as a robust companion to video detection.</p>
+        </p>
+
+        <h2>Video detection</h2>
+        <p>
+        We also successfully track drones, day or night and at distance using cameras. Needless to say our system is never fooled by birds or other flying bjects. We use infra-red cameras to save costs and avoid using thermal cameras completely.
+        <br /><br />
+        We also have the ability to run our video drone detection on your existing video feeds. If you have invested a lot in your camera and surveillance infrastructure you can make that investment go further. This is one of the major reasons we decided to focus on making drone detection work on commodity cameras.
+        </p>
+
+        <h2>How good is your drone detection?</h2>
+
+        <p>
+        Do you have a drone detection system? We can test its effectiveness with a penetration test. <br /><br />We will fly a drone and place our business card on the roof of your premises without being detected.
+        <br />
+        We are uniquely placed to do this as makers of drone counter measure systems. We will also attempt to bypass state of the art systems employing Ai/ML with adversarial machine learning techniques.
+        </p>
       </div>
     </article>
 
