--- a/products.html
+++ b/products.html
@@ -105,7 +105,8 @@
               Lightweight portable design  <br /><br />
               Various battery capacity options for UPS module  <br /><br />
               500m IR illumination  <br /><br />
-              Optional GSM Module <br /><br /><br /><br />
+              Optional GSM Module <br /><br />
+              180 degree field of view <br /><br /><br /><br />
 
               £3000 excluding VAT <br /><br />
               upgrade for full 360 degree field of view + £2000
