--- a/products.html
+++ b/products.html
@@ -141,15 +141,15 @@
 
         <h2>Video detection</h2>
         <p>
-        We also successfully track drones, day or night and at distance using cameras. Needless to say our system is never fooled by birds or other flying bjects. We use infra-red cameras to save costs and avoid using thermal cameras completely.
+        We also successfully track drones, day or night and at distance using cameras. Needless to say our system is never fooled by birds or other flying objects. We use infra-red cameras to save costs and avoid using thermal cameras completely.
         <br /><br />
-        We also have the ability to run our video drone detection on your existing video feeds. If you have invested a lot in your camera and surveillance infrastructure you can make that investment go further. This is one of the major reasons we decided to focus on making drone detection work on commodity cameras.
+        We also have the ability to run our video drone detection on your existing video feeds. If you have invested a lot in your camera and surveillance infrastructure you can make that investment go further. This is one of the major reasons we decided to focus on making our drone detection system work effectively on commodity hardware.
         </p>
 
         <h2>How good is your drone detection?</h2>
 
         <p>
-        Do you have a drone detection system? We can test its effectiveness with a penetration test. <br /><br />We will fly a drone and place our business card on the roof of your premises without being detected.
+        Do you have a drone detection system? We can test its effectiveness with a pentest. <br /><br />We will fly a drone and place our business card on the roof of your premises without being detected.
         <br />
         We are uniquely placed to do this as makers of drone counter measure systems. We will also attempt to bypass state of the art systems employing Ai/ML with adversarial machine learning techniques.
         </p>
