--- a/products.html
+++ b/products.html
@@ -150,8 +150,8 @@
 
         <p>
         Do you have a drone detection system? We can test its effectiveness with a pentest. <br /><br />We will fly a drone and place our business card on the roof of your premises without being detected.
-        <br />
-        We are uniquely placed to do this as makers of drone counter measure systems. We will also attempt to bypass state of the art systems employing Ai/ML with adversarial machine learning techniques.
+        <br /><br />
+        We are uniquely placed to do this as makers of drone counter measure systems with previous experience in cyber security. We will also attempt to bypass state of the art systems employing Ai/ML with adversarial machine learning techniques.
         </p>
       </div>
     </article>
