--- a/products.html
+++ b/products.html
@@ -62,6 +62,7 @@
             <p class="f7 mt4 tl" style="font-size: 1em;">The F-Series drone system is a self contained system designed to work offline and without updates.</p>
             <p class="f7 mt4 tl" style="font-size: 1em;">
               Advanced optical drone detection <br /><br />
+              Advanced acoustic drone detection <br /><br />
               Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
               Options for custom alerting: sms, email, REST, GPIO  <br /><br />
               Works offline (works without updates or internet connection)  <br /><br />
@@ -98,6 +99,7 @@
             <p class="f7 mt4 tl" style="font-size: 1em;"></p>
             <p class="f7 mt4 tl" style="font-size: 1em;">
               Advanced optical drone detection <br /><br />
+              Advanced acoustic drone detection <br /><br />
               Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
               Options for custom alerting: sms, email, REST, GPIO  <br /><br />
               Works offline (works without updates or internet connection)  <br /><br />
